# salty

./: .gitignore  .travis.yml  LICENSE  README.md  cabal.project  salty.cabal  stack.yaml
2020-CAV/: bibfile.bib  macros.tex  paper.tex
CollisionAvoidance/: README.md  gen_ctrl.sh  gen_ltl.py  pygame_env.py
CooperativeSearch/: CreateUxasSkeleton.py  README.md
CooperativeSearch/UxasFiles/: Scenario_CooperativeSearch.xml  runAMASE_CooperativeSearch.sh
CooperativeSearch/UxasFiles/MessagesToSend/Tasks/: 3_WatchTask.xml  4_PointSearchTask.xml  AutomationRequest_Test.xml  KeepInZone_10.xml  MissionCommand.xml
CooperativeSearch/UxasFiles/MessagesToSend/Vehicles/: AirVehicleConfiguration_V1.xml  AirVehicleConfiguration_V2.xml  AirVehicleState_V1.xml  AirVehicleState_V2.xml
CooperativeSearch/psaltlib/General/: AvState.py  __init__.py  template.txt
CooperativeSearch/psaltlib/General/localcoords/: LocalCoordsModule.cpp
CooperativeSearch/psaltlib/Inputs/: __init__.py  inRange.py
CooperativeSearch/psaltlib/LMCP/py/: LMCPClient.py  LMCPServer.py  Readme.html  __init__.py
CooperativeSearch/psaltlib/Outputs/: Return.py  Search1.py  __init__.py
SaltyIntroIndexHtml/: .gitignore  Makefile  diagrams.key  reveal.template  salty.md
SaltyIntroIndexHtml/examples/: enum.salt  example1.salt  example2.salt  example3.salt  macro-error.salt
SaltyIntroIndexHtml/exercises/: boolean.salt  enum-macro.salt  play-calling.salt  traffic-light.salt
SaltyIntroIndexHtml/plugin/highlight/: highlight.js
VIP-Escort/: README.md  VIP_simulation.py
VIP-Escort/UxasFiles/: runUxAS_VIPEscort.sh
VIP-Escort/UxasFiles/MessagesToSend/Tasks/: 1_Area.xml  3_Area.xml  4_Area.xml  AutomationRequest_Test.xml
VIP-Escort/UxasFiles/MessagesToSend/Vehicles/: AirVehicleConfiguration_V1.xml  AirVehicleConfiguration_V4.xml  AirVehicleState_V2.xml
VIP-Escort/UxasFiles/MessagesToSend/Zones/: 1_KeepInZone.xml  1_OperatingRegion.xml
VIP-Escort/ctrl/: vip.salt
VIP-Escort/libs/: AvState.py
VIP-Escort/lmcp/py/: LMCPClient.py  LMCPServer.py
VIP-Escort/lmcp/py/lmcp/: LMCPFactory.py
VIP-Escort/uxas/messages/route/: RouteRequest.py
VIP-Escort/uxas/messages/task/: PlanningState.py  TaskActive.py  TaskAutomationRequest.py  TaskImplementationResponse.py  TaskOption.py  TaskPlanOptions.py  UniqueAutomationResponse.py
doc/: .gitignore  Makefile  salty.md
doc/2020-CAV/: macros.tex  paper.tex  salty.eps
doc/2020-SEFM/: bibfile.bib  paper.tex  paper_back.tex  paper_back_v2.tex  paper_back_v3.tex  paper_back_v4.tex  paper_joffrey.tex
examples/: DemoTest.java  Makefile  RunTests.py  demo.salt  fastslow_orig.salt  firefighting.salt  hideandseek.salt  init.salt  linefollower.salt  maximallyPermissiveTest.salt  maximallyPermissiveTest.salty  middleware.salt  networks.salt  numeric.salt  optimisticRecoveryTest.salt  play_calling.salt  robotWaiter.salt  semantics_difference.salt  simple_safety_example.salt  unrealizable_waiter.salt  water_reservoir.salt
examples/AnzuSpecs/: README.md
examples/AnzuSpecs/Arbiter/: spec2_orig.salt  spec3.cfg  spec3.salt  spec4.cfg  spec5.cfg  spec5.salt  spec6.salt  spec7.cfg  spec7.salt  spec8.salt  spec9.salt
examples/AnzuSpecs/genbuf_cfg/: genbuf_spec_generator.pl  spec1.cfg  spec10.cfg  spec3.cfg  spec3.salt  spec4.cfg  spec4.salt  spec5.salt  spec6.cfg  spec7.salt  spec8.cfg  spec9.salt
examples/AnzuSpecs/running_lights/: genRunningLights.py  running_lights_12.salt
examples/Basic/: README.md  maximallyPermissiveTest.salt  nested_macro.salt  numeric.salt  trafficLight.salt  trafficLightAgg.salt  trafficLightEnum.salt
examples/CollisionAvoidance/: README.md  ltl_temp.tl  simulation.py
examples/CooperativeSearch/: CooperativeSearch.py  CooperativeSearch.salt  CooperativeSearch_Simulation.py  CreateUxasSkeleton.py  README.md
examples/CooperativeSearch/UxasFiles/: README.md  Scenario_CooperativeSearch.xml  cfg_CooperativeSearch.xml  runUxAS_CooperativeSearch.sh
examples/LTLMoP/: README.md  meals.salt
examples/Slugs/: README.md  simple_safety_example.salt
examples/TuLiP/GnomesAndTrolls/: README.md  genGnomesSpec.py  grid_T1_G2_H5_W10.salt  grid_T2_G2_H5_W10.salt  grid_T2_G5_H5_W10.salt
examples/TuLiP/ParkingRobot/: README.md  gr1.py  tulipGr1.salt
examples/VIP-Escort/: README.md  __init__.py  simulation.py
examples/VIP-Escort/UxasFiles/: Scenario_VipEscort.xml  cfg_VIPEscort.xml  runAMASE_VIPEscort.sh
newExamples/AnzuSpecs/: README.md  psltosalty.py
newExamples/AnzuSpecs/Arbiter/: ahb_spec_generator_1.2.pl  spec2.cfg  spec4.salt  spec6.cfg  spec8.cfg  spec9.cfg
newExamples/AnzuSpecs/genbuf_cfg/: spec1.salt  spec10.salt  spec2.cfg  spec2.salt  spec5.cfg  spec6.salt  spec7.cfg  spec9.cfg
newExamples/AnzuSpecs/running_lights/: running_lights_16.salt
newExamples/GnomesAndTrolls/: README.txt  genrandgrid.py  genrandt.py  grid_2_3.salt  grid_3_5.salt  grid_6_8.salt  grid_T1_G2_H4_W6.salt  test.salt
newExamples/ParkingRobot/: README.txt
newExamples/RunningLights/: README.md  RunningLights.py  RunningLightsEnum.py  running_lights.salt  running_lights_enum.salt
newExamples/TrafficLight/: trafficLight.salt
salty/: Main.hs  Options.hs
scripts/: setup.sh
src/: Message.hs  Opt.hs  PP.hs  Panic.hs  Slugs.hs  SrcLoc.hs  TypeCheck.hs
src/CodeGen/: Cpp.hs  Dot.hs  Java.hs  PySQLite.hs  Python.hs  SPARK.hs
src/Opt/: HashCons.hs  Simpl.hs
src/Scope/: Check.hs  Name.hs
src/Slugs/: Env.hs  FSM.hs  Run.hs  Translate.hs
src/Syntax/: AST.hs  Lexer.x  Parser.y
src/TypeCheck/: AST.hs  Expand.hs  Groups.hs  Infer.hs  Monad.hs  PP.hs  SMT.hs  Sanity.hs  Unify.hs
tests/: SpiderAndNao.salt  demo.salt  iRobotCreatewithpickup.salt  init.salt  linefollower.salt  middleware.salt  multiagent_example.salt  numeric.salt  semantics_difference.salt
(+689 files in other folders)
