name:                salty
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Galois, Inc.
maintainer:          trevor@galois.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     CodeGen.Java
                       Opt.Simpl
                       PP
                       Scope.Check
                       Scope.Name
                       Slugs
                       Slugs.Env
                       Slugs.FSM
                       Slugs.Translate
                       Syntax.AST
                       Syntax.Lexer
                       Syntax.Parser
                       TypeCheck
                       TypeCheck.AST
                       TypeCheck.Expand
                       TypeCheck.Groups
                       TypeCheck.Infer
                       TypeCheck.Monad
                       TypeCheck.Unify
  build-depends:       base >=4.8 && <5,
                       language-slugs,
                       located,
                       array,
                       containers,
                       monadLib,
                       GraphSCC,
                       text,
                       pretty
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable salty
  main-is:             Main.hs
  build-depends:       base >=4.8 && <5,
                       language-slugs,
                       text,
                       salty
  hs-source-dirs:      salty
  default-language:    Haskell2010
  ghc-options:         -Wall
