name:                salty
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Galois, Inc.
maintainer:          trevor@galois.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10
Tested-With:         GHC == 8.0.1, GHC == 8.0.2

synopsis:            Synthesis DSL
description:         A DSL for synthesizing controllers from GR(1) specifications

bug-reports:         https://github.com/GaloisInc/salty/issues

source-repository head
  type:     git
  location: https://github.com/GaloisInc/salty.git

library
  exposed-modules:     CodeGen.Dot
                       CodeGen.Java
                       CodeGen.Python
                       Message
                       Opt
                       Opt.HashCons
                       Opt.Simpl
                       PP
                       Scope.Check
                       Scope.Name
                       Slugs
                       Slugs.Env
                       Slugs.FSM
                       Slugs.Translate
                       Syntax.AST
                       Syntax.Lexer
                       Syntax.Parser
                       TypeCheck
                       TypeCheck.AST
                       TypeCheck.Expand
                       TypeCheck.Groups
                       TypeCheck.Infer
                       TypeCheck.Monad
                       TypeCheck.Sanity
                       TypeCheck.Unify
  other-modules:       Panic
  build-tools:         happy >= 1.19.5,
                       alex  >= 3.1.7
  build-depends:       base >=4.8 && <5,
                       language-slugs,
                       located >= 0.1.1.0,
                       array,
                       containers,
                       monadLib,
                       GraphSCC,
                       text,
                       bytestring,
                       pretty,
                       filepath,
                       simple-smt
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable salty
  main-is:             Main.hs
  other-modules:       Options
  build-depends:       base >=4.8 && <5,
                       aeson,
                       aeson-pretty,
                       language-slugs,
                       located,
                       text,
                       bytestring,
                       directory,
                       containers,
                       filepath,
                       pretty-show,
                       salty
  hs-source-dirs:      salty
  default-language:    Haskell2010
  ghc-options:         -Wall
